Decay Datapack enhanced!